<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_with__border" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/twitter_logo"
            android:src="@drawable/twitter_t_logo" />

        <EditText
            android:id="@+id/search_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="middle"
            android:hint="@string/input_hint"
            android:lines="1"
            android:typeface="normal" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/button_content_desp"
            android:src="@drawable/ic_search_img" />
    </LinearLayout>

    <TextView
        android:id="@+id/tweet_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tweet_header_background"
        android:gravity="right"
        android:paddingRight="4dp"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false" >
    </ListView>

</LinearLayout>